[gd_scene load_steps=5 format=3 uid="uid://cxj66r5y818vv"]

[ext_resource type="Script" path="res://ui/image_viewer/symbol/static_symbol.gd" id="1_v27ek"]
[ext_resource type="PackedScene" uid="uid://bwbdpb164qkuo" path="res://ui/image_viewer/symbol/static_label.tscn" id="3_pkybf"]
[ext_resource type="Script" path="res://ui/image_viewer/symbol/static_symbol_draw.gd" id="4_xte3t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qaaa1"]
size = Vector2(1, 1)

[node name="StaticSymbol" type="Node2D"]
script = ExtResource("1_v27ek")

[node name="StaticSymbolDraw" type="Node2D" parent="." groups=["draw_group"]]
script = ExtResource("4_xte3t")

[node name="StaticLabel" parent="StaticSymbolDraw" instance=ExtResource("3_pkybf")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qaaa1")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
